--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,4 +14,5 @@
   <h1 class="dailyAiSuggestion">Hello from My Extension</h1>
   <p>This is the popup screen content.</p>
 </body>
+<script src="popup.js"></script>
 </html>
