--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,18 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>My Extension Popup</title>
+  <meta charset="UTF-8">
+  <p>developed by <a href="https://enginkaratas.com">enginkaratas</a></p>
+  <title>ChangeMyLifeAI - AI Tools Daily</title>
   <style>
     body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #e7d1e5, #e8f0f1, #ffc85b, #8390cf);
       font-family: Arial, sans-serif;
-      width: 200px;
-      padding: 10px;
+    }
+
+    .container {
+      width: 350px;
+      max-height: 500px;
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      margin: 50px auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 20px;
+      margin: 50px 50px;
+    }
+
+    h1 {
+      font-size: 24px;
+      color: #333333;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 16px;
+      color: #555555;
+      text-align: center;
+      line-height: 1.5;
+    }
+
+    button {
+      background-color: #ffc85b;
+      color: #ffffff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 18px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #ffad4d;
     }
   </style>
 </head>
+
 <body>
-  <h1 class="dailyAiSuggestion">Hello from My Extension</h1>
-  <p>This is the popup screen content.</p>
+  <div class="container">
+    <div class="fetched-content">
+      <div class="title">
+        <h1 id="title">No AI tool suggestion today</h1>
+      </div>
+      <div class="description">
+        <p id="description"> Contact now if you like to see more pretty AI tools. We have no idea what you are doing right now, but we
+          know that you are awesome! </p>
+      </div>
+    </div>
+    <div class="static">
+      <button style="width: 100%;">пратити</button>
+      <p style="font-size: 0.5rem;">Every day you will get a new AI tool suggestion to help you in your life.
+      <p style="color: #8997db"><b>ChangeMyLifeAI</b></p>
+      </p>
+    </div>
 </body>
 <script src="popup.js"></script>
+
 </html>
