update html content

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <p>developed by <a href="https://enginkaratas.com">enginkaratas</a></p>
+  <p>give me a coffee<a href="https://enginkaratas.com">☕enginkaratas</a></p>
   <title>ChangeMyLifeAI - AI Tools Daily</title>
   <style>
     body {
@@ -61,6 +61,7 @@
 
 <body>
   <div class="container">
+    <h4>Today`s AI Tool(24.07.2023-Monday)</h4>
     <div class="fetched-content">
       <div class="title">
         <h1 id="title">No AI tool suggestion today</h1>
